--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root">
-      <h1>Hello world!</h1>
+    <div id="content" style= "text-align:center">
+      <h1>Dialecto Oculto</h1>
+      <h2>Comunícate en secreto con tus contactos</h2>
+      <h3>¡Crea tu propio código!</h3>
+      <button>Quiero crear un mensaje secreto</button>
+      <button>Quiero descifrar un mensaje secreto</button>
     </div>
+    
     <script src="index.js" type="module"></script>
   </body>
 </html>
