--- a/src/index.html
+++ b/src/index.html
@@ -8,22 +8,21 @@
   <body>
     <section id="page1">
     <div id="container">
-      <h1>Dialecto Brujo Oculto</h1>
-        <figure>
-          <img src="img/Bruja magia.gif" width="270px" height="170px">
-        </figure>
+      <header>
+         <h1>Dialecto Brujo Oculto</h1>
+      </header>
+      <figure>
+          <img src="img/Bruja magia.gif" width="270px" height="170px" >
+      </figure>
   
-       <main>
-        <h2>Comunícate en secreto con tus contactos</h2>
-        <p>Dale magia a tus mensajes y transfórmalos en un dialecto en clave solo para ti y tus amigos</p>
-        <h3>¡Crea tu propio código mágico!</h3>
-
+       <article>
+        <h2>Comunícate en secreto con tus contactos, dale magia a tus mensajes y transfórmalos en un dialecto en clave solo para ti y tus amigos ¡Crea tu propio código mágico!</h2>
+       </article>
         <div class="btnPageOne"> 
           <div id="showPage2" class= "btnA">
              <button>Comenzar aquí</button> 
           </div>
         </div>
-        </main>
       </div>
     </section>
 
@@ -33,14 +32,12 @@
              <h1>Código mágico</h1>
          </header>
      <main>
-         <h4>Paso 1: Puedes escribir un mensaje nuevo o pegar el mensaje mágico y así poder descubrir su significado</h4>
-         <p>Si escribes un mensaje nuevo, por favor, utiliza SOLO mayúsculas (sin la letra ñ)</p>
-
+         <h3>Paso 1: Puedes escribir un mensaje nuevo o pegar el mensaje mágico y así poder descubrir su significado</h3>
          <div id="stepOne" autocomplete="off">
              <textarea id="inputText" rows= "4" cols= "50" maxlength= "300" spellcheck="false" placeholder="Escribe (o pega) tu mensaje aquí"  type="text" name="text"></textarea>
          </div>
          
-         <h5>Paso 2: Ahora, tienes que escoger un número (del 1 al 33) para crear tu código especial</h5>
+         <h4>Paso 2: Ahora, tienes que escoger un número (del 1 al 33) para crear tu código especial</h4>
 
          <div id="rank">
            <input id="position" type="number" value="1" min="1" max="33">
@@ -54,7 +51,7 @@
          <div id="result">
              <textarea id="outputText" spellcheck="false" placeholder="Aquí aparecerá tu resultado" readonly type="text" name="text"></textarea>
          </div>
-         <h6>Paso 3: ¡Felicidades 🎉! Ya tienes tu mensaje 🧙, ¡Ahora puedes compartirlo con tus amigos 😎!</h6>
+         <h5>Paso 3: ¡Felicidades 🎉! Ya tienes tu mensaje 🧙, ¡Ahora puedes compartirlo con tus amigos 😎!</h5>
          <p>Para compartir solo tienes que hacer click en una de las imágenes</p>
          <div class="socialNetwork">
              <a href="https://web.whatsapp.com/" target="_blank"><img src="img/whatsapp.png"></a>
