Cambios en la descripción del paso a paso para facilitar la comprensibilidad en el usuario

--- a/src/index.html
+++ b/src/index.html
@@ -34,23 +34,19 @@
         <div id="stepOne" autocomplete="off">
             <textarea id="inputText" rows= "4" cols= "50" maxlength= "300" spellcheck="false" placeholder="Escribe (o pega) tu mensaje aquí"  type="text" name="text"></textarea>
         </div>
-        
-        <h4>Paso 2: Ahora, tienes que escoger un número (del 1 al 33) para crear tu código especial</h4>
-
+        <h4>Paso 2: Ahora, tienes que escoger un número (del 1 al 33) para crear tu código especial. Una vez seleccionado el número, haz click sobre uno de los botones dependiendo de si quieres cifrar o descifrar tu mensaje. Para borrar todo y volver a comenzar, haz click sobre el botón "Limpiar"</h4>
         <div id="rank">
           <input id="position" type="number" value="0" min="1" max="33">
         </div>
-
         <div id="cipherBtn">
         <button type="button" id="encode">Cifrar</button>
         <button type="button" id="decode">Descifrar</button>
         <button type="button" class= "clearBtn" id= "clear">Limpiar</button>
         </div>
-    
         <div id="result">
             <textarea id="outputText" spellcheck="false" placeholder="Aquí aparecerá tu resultado" readonly type="text" name="text"></textarea>
         </div>
-        <h5>Paso 3: ¡Felicidades 🎉! Ya tienes tu mensaje 🧙, ¡Ahora puedes compartirlo con tus amigos 😎!</h5>
+        <h5>Paso 3: ¡Felicidades 🎉! Ya tienes tu mensaje 🧙, ¡Ahora solo tienes que copiarlo y compartirlo con tus amigos 😎!</h5>
         <p>Para compartir solo tienes que hacer click en una de las imágenes</p>
         <div class="socialNetwork">
             <a href="https://web.whatsapp.com/" target="_blank"><img src="img/whatsapp.png"></a>
